tests/fixtures/invalid/int_mod_bytes.py
# Cannot modulo Int and Bytes
x: int = 1 % b"hello"
